--- a/global_templates/base.html
+++ b/global_templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Samify{% endblock %}</title>
+    <title>{% block title %}AsyncMLEngine{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Optional: Include project-specific CSS -->
@@ -40,7 +40,7 @@
     <header>
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="{% url 'home' %}">Samify</a>
+            <a class="navbar-brand" href="{% url 'home' %}">AsyncMLEngine</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -87,7 +87,7 @@
 
     <footer class="footer bg-dark text-white text-center py-3">
         <div class="container">
-            © 2024 - Samify
+            © 2024 - AsyncMLEngine
         </div>
     </footer>
 
